# j63

./: .gitignore  README.md  build.py  pyproject.toml  vsg.yaml
docs/: Calculations.fods
hw/common/: math_pkg.vhd  sync_bit.vhd  test_pkg.vhd
hw/debug/: tb_wb_debug.gtkw  tb_wb_debug.vhd  wb_debug.vhd  wb_debug_uart.vhd
hw/gpu/: fb_dma.vhd  gpu.vhd  gpu_pkg.vhd  sim_sram.vhd  sim_vga.vhd  sram_arbiter.vhd  tb_gpu.gtkw  tb_gpu.vhd  tb_vga.vhd  vga.vhd
hw/gpu/gpu-cosim/: Cargo.toml
hw/gpu/gpu-cosim/src/: lib.rs
hw/mem/: sim_sram.vhd  wb_arbiter.vhd  wb_dma_to_fifo.vhd  wb_pkg.vhd  wb_sram.gtkw  wb_sram.psl  wb_sram.sby  wb_sram.vhd
hw/quartus/: j63.qpf  j63.qsf  j63.sdc  j63_toplevel.vhd  sys_pll.qip  sys_pll.vhd  vga_fb_fifo.qip  vga_fb_fifo.vhd  vga_pll.ppf  vga_pll.qip  vga_pll.vhd
hw/serial/: tb_uart_rx.gtkw  tb_uart_rx.vhd  tb_uart_tx.gtkw  tb_uart_tx.vhd  uart_rx.vhd  uart_tx.vhd
hw/sys/: reset_gen.vhd
tools/: uart_debug.py
